[Refactor][config] Reorganize navbar and docs sidebar structure
Split single Notes sidebar into 3 independent sidebars (knowledge, experience, coding), convert navbar entry to dropdown with 3 sub-items, merge LeetCode into Coding sidebar, and add i18n translations for all 10 locales.

--- a/i18n/en/docusaurus-theme-classic/navbar.json
+++ b/i18n/en/docusaurus-theme-classic/navbar.json
@@ -22,5 +22,17 @@
   "item.label.About": {
     "message": "About",
     "description": "Navbar item with label About"
+  },
+  "item.label.Knowledge": {
+    "message": "Knowledge",
+    "description": "Navbar item with label Knowledge"
+  },
+  "item.label.Experience": {
+    "message": "Experience",
+    "description": "Navbar item with label Experience"
+  },
+  "item.label.Coding": {
+    "message": "Coding",
+    "description": "Navbar item with label Coding"
   }
 }
