--- a/i18n/de/docusaurus-theme-classic/navbar.json
+++ b/i18n/de/docusaurus-theme-classic/navbar.json
@@ -22,5 +22,17 @@
   "item.label.About": {
     "message": "Über mich",
     "description": "Navbar item with label About"
+  },
+  "item.label.Knowledge": {
+    "message": "Wissen",
+    "description": "Navbar item with label Knowledge"
+  },
+  "item.label.Experience": {
+    "message": "Erfahrung",
+    "description": "Navbar item with label Experience"
+  },
+  "item.label.Coding": {
+    "message": "Programmierung",
+    "description": "Navbar item with label Coding"
   }
 }
