--- a/i18n/es/docusaurus-theme-classic/navbar.json
+++ b/i18n/es/docusaurus-theme-classic/navbar.json
@@ -22,5 +22,17 @@
   "item.label.About": {
     "message": "Acerca de",
     "description": "Navbar item with label About"
+  },
+  "item.label.Knowledge": {
+    "message": "Conocimiento",
+    "description": "Navbar item with label Knowledge"
+  },
+  "item.label.Experience": {
+    "message": "Experiencia",
+    "description": "Navbar item with label Experience"
+  },
+  "item.label.Coding": {
+    "message": "Codificación",
+    "description": "Navbar item with label Coding"
   }
 }
