--- a/i18n/fr/docusaurus-theme-classic/navbar.json
+++ b/i18n/fr/docusaurus-theme-classic/navbar.json
@@ -22,5 +22,17 @@
   "item.label.About": {
     "message": "À propos",
     "description": "Navbar item with label About"
+  },
+  "item.label.Knowledge": {
+    "message": "Connaissances",
+    "description": "Navbar item with label Knowledge"
+  },
+  "item.label.Experience": {
+    "message": "Expérience",
+    "description": "Navbar item with label Experience"
+  },
+  "item.label.Coding": {
+    "message": "Programmation",
+    "description": "Navbar item with label Coding"
   }
 }
