--- a/i18n/pt-BR/docusaurus-theme-classic/navbar.json
+++ b/i18n/pt-BR/docusaurus-theme-classic/navbar.json
@@ -22,5 +22,17 @@
   "item.label.About": {
     "message": "Sobre",
     "description": "Navbar item with label About"
+  },
+  "item.label.Knowledge": {
+    "message": "Conhecimento",
+    "description": "Navbar item with label Knowledge"
+  },
+  "item.label.Experience": {
+    "message": "Experiência",
+    "description": "Navbar item with label Experience"
+  },
+  "item.label.Coding": {
+    "message": "Codificação",
+    "description": "Navbar item with label Coding"
   }
 }
