--- a/i18n/zh-tw/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh-tw/docusaurus-theme-classic/navbar.json
@@ -22,5 +22,17 @@
   "item.label.About": {
     "message": "關於我",
     "description": "Navbar item with label About"
+  },
+  "item.label.Knowledge": {
+    "message": "知識庫",
+    "description": "Navbar item with label Knowledge"
+  },
+  "item.label.Experience": {
+    "message": "實戰經驗",
+    "description": "Navbar item with label Experience"
+  },
+  "item.label.Coding": {
+    "message": "程式實作",
+    "description": "Navbar item with label Coding"
   }
 }
