--- a/i18n/zh-tw/docusaurus-plugin-content-docs/current.json
+++ b/i18n/zh-tw/docusaurus-plugin-content-docs/current.json
@@ -98,5 +98,121 @@
   "sidebar.ShowCase.category.🔋 Server": {
     "message": "🔋 Server",
     "description": "The label for category 🔋 Server in sidebar ShowCase"
+  },
+  "sidebar.knowledge.category.🌐 Browser & Network": {
+    "message": "🌐 Browser & Network",
+    "description": "The label for category '🌐 Browser & Network' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.HTTP": {
+    "message": "HTTP",
+    "description": "The label for category 'HTTP' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.Browser": {
+    "message": "Browser",
+    "description": "The label for category 'Browser' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.📒 JavaScript Ecosystem": {
+    "message": "📒 JavaScript Ecosystem",
+    "description": "The label for category '📒 JavaScript Ecosystem' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.JavaScript": {
+    "message": "JavaScript",
+    "description": "The label for category 'JavaScript' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.TypeScript": {
+    "message": "TypeScript",
+    "description": "The label for category 'TypeScript' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.⚛️ Frontend Frameworks": {
+    "message": "⚛️ Frontend Frameworks",
+    "description": "The label for category '⚛️ Frontend Frameworks' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.React": {
+    "message": "React",
+    "description": "The label for category 'React' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.Vue": {
+    "message": "Vue",
+    "description": "The label for category 'Vue' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.🎨 CSS & UI": {
+    "message": "🎨 CSS & UI",
+    "description": "The label for category '🎨 CSS & UI' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.CSS": {
+    "message": "CSS",
+    "description": "The label for category 'CSS' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.🛡️ Web Security": {
+    "message": "🛡️ Web Security",
+    "description": "The label for category '🛡️ Web Security' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.Web Security": {
+    "message": "Web Security",
+    "description": "The label for category 'Web Security' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.Authentication Implementation": {
+    "message": "Authentication Implementation",
+    "description": "The label for category 'Authentication Implementation' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.🛠️ Engineering & Tools": {
+    "message": "🛠️ Engineering & Tools",
+    "description": "The label for category '🛠️ Engineering & Tools' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.Engineering Tools": {
+    "message": "Engineering Tools",
+    "description": "The label for category 'Engineering Tools' in sidebar 'knowledge'"
+  },
+  "sidebar.knowledge.category.Performance Optimization": {
+    "message": "Performance Optimization",
+    "description": "The label for category 'Performance Optimization' in sidebar 'knowledge'"
+  },
+  "sidebar.experience.category.🏗️ 專案架構": {
+    "message": "🏗️ 專案架構",
+    "description": "The label for category '🏗️ 專案架構' in sidebar 'experience'"
+  },
+  "sidebar.experience.category.🌐 SSR & SEO": {
+    "message": "🌐 SSR & SEO",
+    "description": "The label for category '🌐 SSR & SEO' in sidebar 'experience'"
+  },
+  "sidebar.experience.category.ssr-seo-seo": {
+    "message": "SEO",
+    "description": "The label for category 'SEO' in sidebar 'experience'"
+  },
+  "sidebar.experience.category.ssr-seo-ssr": {
+    "message": "SSR",
+    "description": "The label for category 'SSR' in sidebar 'experience'"
+  },
+  "sidebar.experience.category.📦 狀態管理": {
+    "message": "📦 狀態管理",
+    "description": "The label for category '📦 狀態管理' in sidebar 'experience'"
+  },
+  "sidebar.experience.category.state-management-vue": {
+    "message": "Vue",
+    "description": "The label for category 'Vue' in sidebar 'experience'"
+  },
+  "sidebar.coding.category.📗 Lodash Functions": {
+    "message": "📗 Lodash Functions",
+    "description": "The label for category '📗 Lodash Functions' in sidebar 'coding'"
+  },
+  "sidebar.coding.category.🖋️ Easy": {
+    "message": "🖋️ Easy",
+    "description": "The label for category '🖋️ Easy' in sidebar 'coding'"
+  },
+  "sidebar.coding.category.🖋️ Medium": {
+    "message": "🖋️ Medium",
+    "description": "The label for category '🖋️ Medium' in sidebar 'coding'"
+  },
+  "sidebar.coding.category.📗 JavaScript": {
+    "message": "📗 JavaScript",
+    "description": "The label for category '📗 JavaScript' in sidebar 'coding'"
+  },
+  "sidebar.coding.category.📊 LeetCode": {
+    "message": "📊 LeetCode",
+    "description": "The label for category '📊 LeetCode' in sidebar 'coding'"
+  },
+  "sidebar.coding.category.📁 Easy": {
+    "message": "📁 Easy",
+    "description": "The label for category '📁 Easy' in sidebar 'coding'"
   }
 }
